<resources>
    <string name="app_name">ActivityParks</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_auth_reg">AuthRegActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_main">Главная</string>
    <string name="menu_parks">Парки г.Москва</string>
    <string name="menu_activities">События в парках</string>
    <string name="menu_authReg">Вход</string>
    <string name="menu_logout">Выход</string>
    <string name="menu_notes">Мои заметки</string>
    <string name="menu_author">Об авторе</string>
    <string name="menu_info">О программе</string>


    <string name="author">Студент Московского политеха: Романов В.С. группа 201-361</string>
    <string name="info">Приложение, которое позволяет узнать о проводимых активностях парков г. Москва. Для этого на главной странице есть поисковая строка. где по названию парка выдаст результат о событиях в конкретном парке. Так же можно перейти в раздел события, в котором отображены все проводимые активности во всех парках. В случае, если событие понравилось, то авторизовавшись можно добавлять их в заметки. Также присутсвует раздел со списком всех парков для ознакомления.</string>

    <string name="login_label">Логин</string>
    <string name="password_label">Пароль</string>


    <string name="home_search_hint">Введите название парка...</string>


</resources>