<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">



    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mainFragment"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_main" />
        <item
            android:id="@+id/parksFragment"
            android:icon="@drawable/ic_park"
            android:title="@string/menu_parks" />
        <item
            android:id="@+id/activitiesFragment"
            android:icon="@drawable/ic_event"
            android:title="@string/menu_activities" />
    </group>
    <item android:title="Для пользователя">

        <menu>
            <item
                android:id="@+id/authRegActivity"
                android:icon="@drawable/baseline_login"
                android:title="@string/menu_authReg" />
            <item
                android:id="@+id/logoutFragment"
                android:icon="@drawable/baseline_logout"
                android:title="@string/menu_logout" />
            <item
                android:id="@+id/notesFragment"
                android:icon="@drawable/baseline_notes"
                android:title="@string/menu_notes" />
        </menu>

    </item>

    <item android:title="Другое">

        <menu>
            <item
                android:id="@+id/authorFragment"
                android:icon="@drawable/baseline_person"
                android:title="@string/menu_author" />
            <item
                android:id="@+id/infoFragment"
                android:icon="@drawable/baseline_info"
                android:title="@string/menu_info" />
        </menu>

    </item>


</menu>