<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.activityparks.ui.main.MainFragment"
        android:label="@string/menu_main"
        tools:layout="@layout/fragment_main"/>

    <fragment
        android:id="@+id/parksFragment"
        android:name="com.example.activityparks.ui.parks.ParksFragment"
        android:label="@string/menu_parks"
        tools:layout="@layout/fragment_parks" />

    <fragment
        android:id="@+id/activitiesFragment"
        android:name="com.example.activityparks.ui.activities.ActivitiesFragment"
        android:label="@string/menu_activities"
        tools:layout="@layout/fragment_activities" />
</navigation>